docs/pages/versions/v57.0.0/sdk/ui/drop-in-replacements/segmentedcontrol.mdx
---
title: SegmentedControl
description: A segmented control compatible with @react-native-segmented-control/segmented-control.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'ios', 'web', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { PlatformSpotlight, PlatformTabsGroup } from '~/ui/components/PlatformTabs';

A `SegmentedControl` component with an API compatible with `@react-native-segmented-control/segmented-control`. It uses Jetpack Compose `SingleChoiceSegmentedButtonRow` on Android and SwiftUI `Picker` with segmented style on iOS.

Under the hood this component wraps the platform-specific `@expo/ui` primitives:

- **Android**: [Jetpack Compose SegmentedButton](../jetpack-compose/segmentedbutton)
- **iOS**: [SwiftUI Picker](../swift-ui/picker) with `pickerStyle('segmented')`

If you need lower-level control (custom modifiers, styles, or layouts), use those primitives directly.

<PlatformTabsGroup>

<PlatformSpotlight
  android={{
    src: '/static/images/expo-ui/community-segmentedcontrol/android-light.webp',
    darkSrc: '/static/images/expo-ui/community-segmentedcontrol/android-dark.webp',
    alt: 'A Material 3 segmented button row with One selected',
  }}
  ios={{
    src: '/static/images/expo-ui/community-segmentedcontrol/ios-light.webp',
    darkSrc: '/static/images/expo-ui/community-segmentedcontrol/ios-dark.webp',
    alt: 'A segmented control with One selected',
  }}
/>

## Installation

<APIInstallSection />

## Migrating from `@react-native-segmented-control/segmented-control`

- Update the import from `import SegmentedControl from '@react-native-segmented-control/segmented-control'` to `import SegmentedControl from '@expo/ui/community/segmented-control'`.
- Image values in the `values` array are not supported, only strings.
- `momentary`, `backgroundColor`, `fontStyle`, and `activeFontStyle` props are not supported.
- `tintColor` only works on Android (sets the active segment container color). On iOS, it has no effect.

## Basic usage

<ComponentExample
  title="SegmentedControlExample.tsx"
  android={{
    src: '/static/images/expo-ui/examples/community-segmentedcontrol-basic-android-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-segmentedcontrol-basic-android-dark.webp',
    alt: 'A Material 3 segmented button row with One selected',
  }}
  ios={{
    src: '/static/images/expo-ui/examples/community-segmentedcontrol-basic-ios-light.webp',
    darkSrc: '/static/images/expo-ui/examples/community-segmentedcontrol-basic-ios-dark.webp',
    alt: 'A segmented control with One selected',
  }}>

```tsx
import { useState } from 'react';
import SegmentedControl from '@expo/ui/community/segmented-control';

export default function SegmentedControlExample() {
  const [selectedIndex, setSelectedIndex] = useState(0);

  return (
    <SegmentedControl
      values={['One', 'Two', 'Three']}
      selectedIndex={selectedIndex}
      onChange={event => {
        setSelectedIndex(event.nativeEvent.selectedSegmentIndex);
      }}
    />
  );
}
```

</ComponentExample>

## API

```tsx
import SegmentedControl from '@expo/ui/community/segmented-control';
```

<APISection packageName="expo-ui/community/segmented-control" apiName="SegmentedControl" />

</PlatformTabsGroup>
